--- a/cookieConcent/cookie.css
+++ b/cookieConcent/cookie.css
@@ -2,7 +2,7 @@
   padding: 0;
   margin: 0;
 }
-body {
+.contain {
   width: 50%;
   height: 60vh;
   margin: 18vh auto 0 !important;
@@ -10,13 +10,15 @@ body {
   border-radius: 20px;
   padding: 50px;
   position: relative;
+
 }
-body span {
+.contain span {
   margin: 10px;
 }
 .cookie {
-    visibility: hidden;
-    opacity: 0;
+  visibility: hidden;
+  opacity: 0;
+  z-index: 9999;
   position: absolute;
   width: 30%;
   height: 45%;
@@ -27,6 +29,7 @@ body span {
   font-family: Arial, Helvetica, sans-serif;
   bottom: 0;
   margin: 20px;
+  margin-bottom: -200px;
   padding: 20px;
   transition: all ease-in-out 0.3s;
 }
@@ -45,8 +48,8 @@ body span {
   top: 0;
   margin: 15px;
 }
-.fa-xmark:hover{
-    cursor: pointer;
+.fa-xmark:hover {
+  cursor: pointer;
 }
 .cookie .mybtn {
   color: black;
@@ -64,4 +67,13 @@ body span {
 }
 .mybtn:hover {
   background: #e3e1e1;
+}
+.lay{
+  top: 0;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  z-index: 1;
+  background-color: #00000040;
+  visibility: hidden;
 }
